<resources>
    <string name="app_name">OFSample</string>
    <string name="orangefilter_serial_number">0b7f3051-bf5d-11ea-90f8-b42e994ac7a8</string>
    <string name="build_version">1.0</string>

    <string name="hazy_beauty">朦胧美颜</string>
    <string name="clear_beauty">清晰美颜</string>
    <string name="plastic">整形</string>
    <string name="filter">滤镜</string>
    <string name="stickers">贴纸</string>
    <string name="gestures">手势</string>

    <string name="permission_denied">所需权限被拒绝</string>
    <string name="original">原图</string>
    <string name="skin_hazy">美肤（朦胧）</string>
    <string name="skin_clear">美肤（清晰）</string>
    <string name="whitening">美白</string>
    <string name="narrow_face">窄脸</string>
    <string name="small_face">小脸</string>
    <string name="thin_jawbone">瘦颚骨</string>
    <string name="high_forehead">额高</string>
    <string name="width_forehead">额宽</string>
    <string name="big_eyes">大眼</string>
    <string name="eye_distance">眼距</string>
    <string name="corner_of_eye">眼角</string>
    <string name="thin_nose">瘦鼻</string>
    <string name="long_nose">长鼻</string>
    <string name="narrow_nose">窄鼻梁</string>
    <string name="small_mouth">小嘴</string>
    <string name="mouth_position">嘴位</string>
    <string name="chin">下巴</string>
    <string name="holiday">假日</string>
    <string name="clear">清晰</string>
    <string name="warm">暖阳</string>
    <string name="refreshing">清新</string>
    <string name="matte">粉嫩</string>
    <string name="filter_whitening">美白</string>
    <string name="cool_adaier">冷色-阿黛尔</string>
    <string name="cool_danya">冷色-淡雅</string>
    <string name="cool_jiazhou">冷色-加州</string>
    <string name="cool_mojito">冷色-莫吉托</string>
    <string name="warm_fennen">暖色-粉嫩</string>
    <string name="warm_pure">暖色-青春</string>
    <string name="warm_sweet">暖色-甜美</string>
    <string name="warm_wennuan">暖色-温暖</string>
    <string name="warm_sun">暖色-阳光</string>
    <string name="gril_white">少女-白皙</string>
    <string name="gril_luolita">少女-洛丽塔</string>
    <string name="gril_literature">少女-文艺</string>
    <string name="enhance_amorous">增强-风情</string>
    <string name="enhance_delicious">增强-可口</string>
    <string name="enhance_clear">增强-明朗</string>
    <string name="enhance_nuolan">增强-诺兰</string>
    <string name="enhance_peach">增强-水蜜桃</string>
    <string name="zhigan_cream">质感-冰淇凌</string>
    <string name="zhigan_film">质感-胶片</string>
    <string name="zhigan_magazine">质感-杂志</string>
</resources>
