<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.yy.orangefilter.test.utils.CameraView
        android:id="@+id/cameraView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#99000000">
        <LinearLayout
            android:id="@+id/ll_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvBeautyHazy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:text="@string/hazy_beauty"/>

            <TextView
                android:id="@+id/tvBeautyClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:text="@string/clear_beauty"/>

            <TextView
                android:id="@+id/tvPlastic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:text="@string/plastic"/>

            <TextView
                android:id="@+id/tvFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:text="@string/filter"/>
            <TextView
                android:id="@+id/tvSticker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:text="@string/stickers"/>

        </LinearLayout>
    </HorizontalScrollView>
</RelativeLayout>